Added TotalTweetsUpdated message to messages.js which is called over the event aggregator as soon as all tweets are loaded from the api Edited tweet-service: getTweetsFromUser now calls /api/users/userId/tweets instead of /api/tweets/userId; getGlobalTweets now publishes the number of tweets as well as the total Tweets via the event aggregator Added home.html and home.js to project to be loaded as soon as someone is logged in Added deleteConfirmationDialog.html and deleteConfirmationDialog.js to project (done with aurelia-dialog) Edited timeline.html: Added button for loading only a specific user's tweets (done via route param); Added button to delete a single tweet which triggers the modal deleteConfirmationDialog; Added button for showing the user's profile (prototype) Edited timeline.js: tweets are now loaded in the activate lifecycle; Added method for loading the confirmation dialog Edited app.js: Changed routes to home site Edited home.js: Changed timeline route to accept an optional route param Edited main.js: Added loading of the aurelia-dialog plugin to the configure method

--- a/src/viewmodels/timeline/timeline.html
+++ b/src/viewmodels/timeline/timeline.html
@@ -26,18 +26,37 @@
             <div class="row">
               <div class="five wide column">
                 <div class="ui center aligned">
-                  <i class="circular pencil icon"></i>
+
                   <a class="user">
                     ${tweet.author.firstName} ${tweet.author.lastName}
                   </a>
                 </div>
-
+                <!--<i class="circular pencil icon"></i>-->
                 posted on
 
                 <div class="date">
                   ${tweet.time | dateFormat}
                 </div>
+
+                <a route-href="route: timeline;
+                                   params.bind: {id:tweet.author._id}">
+                  <i class="fa fa-comments" title="Show ${tweet.author.firstName}'s comments only"></i>
+                </a>
+
+                <!--Todo Profile page-->
+                <!--<a route-href="route: timeline;-->
+                                   <!--params.bind: {id:tweet.author._id}">-->
+                  <i class="fa fa-user" title="Show ${tweet.author.firstName}'s profile"></i>
+                </a>
+
+
+                <button type="button" click.trigger="showConfirmationDialog(tweet)">
+                  <i class="fa fa-trash" title="Delete this comment"></i>
+                </button>
+
               </div>
+
+
 
 
               <div class="ten wide column">
@@ -45,6 +64,7 @@
                   ${tweet.message}
                 </div>
               </div>
+
             </div>
           </div>
         </div>
