Added SelectedUserChanged Message for showing the user details Added methos for deleting a single tweet or getting a single user to tweet-service Changed home.js: All tweets and user count for stats are now loaded on activate lifecylce Changed deleteConfirmationDialog.js: It is now fully functional and delets the tweet Changed timeline.js: Changed icon appearance; User Button now redirects to the TODO userDetail route page Added user.html and user.js for showing a users profile (admin will be able to delete it from there) Changed home.js: Added route for userDetail page with required route param (id)

--- a/src/viewmodels/timeline/timeline.html
+++ b/src/viewmodels/timeline/timeline.html
@@ -38,19 +38,19 @@
                   ${tweet.time | dateFormat}
                 </div>
 
-                <a route-href="route: timeline;
+                <a class="ui icon button" route-href="route: timeline;
                                    params.bind: {id:tweet.author._id}">
                   <i class="fa fa-comments" title="Show ${tweet.author.firstName}'s comments only"></i>
                 </a>
 
                 <!--Todo Profile page-->
-                <!--<a route-href="route: timeline;-->
-                                   <!--params.bind: {id:tweet.author._id}">-->
+                <a class="ui icon button" route-href="route: userDetail;
+                                   params.bind: {id:tweet.author._id}">
                   <i class="fa fa-user" title="Show ${tweet.author.firstName}'s profile"></i>
                 </a>
 
 
-                <button type="button" click.trigger="showConfirmationDialog(tweet)">
+                <button class="negative ui icon button" type="button" click.trigger="showConfirmationDialog(tweet)">
                   <i class="fa fa-trash" title="Delete this comment"></i>
                 </button>
 
