--- a/src/viewmodels/timeline/deleteConfirmationDialog.html
+++ b/src/viewmodels/timeline/deleteConfirmationDialog.html
@@ -1,7 +1,7 @@
 <template>
   <ai-dialog>
     <ai-dialog-body>
-      <h2>Deleting Post</h2>
+      <h2>Are you sure you want to delete this post?</h2>
 
     </ai-dialog-body>
 
