Added FollowerUpdatedMessage to messages Adjusted authentication based methods in tweet-Service for bulk delete methods Added following.html, following.js which shows the users someone is following and can be opened by clicking the number of followers on any user's page Added myfollower.html, myfollower.js which uses the authenticatedUser to show its following and followed users Added admin profile picture label to myprofile page Adjusted stats color in stats.html to fit the overall preferred app color (blue) Edited timeline.html, timeline.js: Added view and methods to upload a picture within tweets; Added buttons to toggle a bulk deletion mode for tweets and/or users which can be dismissed after being toggled; Added checkboxes to tweet and user as soon as the deletion mode has been toggled; Added image to tweet Edited user.html: Added route to number of following which them shows all users which the selected user is following Edited app.js: Router is now reset on logout Edited home.js: Added myfollower route which shows the authenticated user's follower and followed users; Added following route which consumes a route param and will be shown on "number of following users" click within the user profile

--- a/src/viewmodels/myprofile/myprofile.html
+++ b/src/viewmodels/myprofile/myprofile.html
@@ -7,9 +7,15 @@
       <div class="five wide centered column">
         <div class="ui card">
           <div class="image" if.bind="authenticatedUser.gender == 'Female'">
+            <div if.bind="hasPermission(authenticatedUser, 'admin')" class="ui red ribbon label">
+              <i class="fa fa-user-md"></i> Admin
+            </div>
             <img src="/src/assets/avatars/kristy.png">
           </div>
           <div class="image" if.bind="authenticatedUser.gender == 'Male'">
+            <div if.bind="hasPermission(authenticatedUser, 'admin')" class="ui red ribbon label">
+              <i class="fa fa-user-md"></i> Admin
+            </div>
             <img src="/src/assets/avatars/christian.jpg">
           </div>
           <div class="content">
@@ -22,10 +28,16 @@
             </div>
           </div>
           <div class="extra content">
-            <a>
+            <a route-href="route: following;
+                             params.bind: {id:authenticatedUser._id}">
               <i class="user icon"></i>
               Following: ${authenticatedUser.following.length}
             </a>
+
+            <!--<a>-->
+            <!--<i class="user icon"></i>-->
+            <!--Following: ${selectedUser.following.length}-->
+            <!--</a>-->
           </div>
         </div>
       </div>
@@ -49,6 +61,24 @@
             </div>
           </div>
 
+          <div class="field">
+            <label>Gender</label>
+            <select class="ui dropdown" value.bind="authenticatedUser.gender"
+                    disabled.bind="!canEditUser(authenticatedUser)">
+              <option repeat.for="gender of genders"
+                      model.bind="gender">
+                ${gender}
+              </option>
+            </select>
+          </div>
+
+          <div class="field">
+            <label>Description</label>
+            <input name="description" type="text" value.bind="authenticatedUser.description"
+                   disabled.bind="!canEditUser(authenticatedUser)">
+          </div>
+
+
           <div class="two fields">
             <div class="field">
               <label>Email</label>
@@ -58,19 +88,10 @@
 
 
             <div class="field">
-              <label>Gender</label>
-              <select class="ui dropdown" value.bind="authenticatedUser.gender" disabled.bind="!canEditUser(authenticatedUser)">
-                <option repeat.for="gender of genders"
-                        model.bind="gender">
-                  ${gender}
-                </option>
-              </select>
+              <label>Password</label>
+              <input name="password" type="password" value.bind="authenticatedUser.password"
+                     disabled.bind="!canEditUser(authenticatedUser)">
             </div>
-          </div>
-
-          <div class="field">
-            <label>Password</label>
-            <input name="password" type="password" value.bind="authenticatedUser.password" disabled.bind="!canEditUser(authenticatedUser)">
           </div>
 
 
