--- a/src/viewmodels/stats/stats.html
+++ b/src/viewmodels/stats/stats.html
@@ -13,10 +13,11 @@
     <div class="five wide column">
       <section class="ui stacked statistic segment">
         <div class="value">
+          <i class="comments outline blue icon"></i>
           ${totalTweets}
         </div>
         <div class="label">
-          Total written Tweets
+          Total written Tweets in our Database
         </div>
       </section>
     </div>
@@ -24,6 +25,7 @@
     <div class="six wide column">
       <section class="ui stacked statistic segment">
         <div class="value">
+          <i class="user blue icon"></i>
           ${totalUsers}
         </div>
         <div class="label">
