--- a/src/viewmodels/signup/signup.html
+++ b/src/viewmodels/signup/signup.html
@@ -1,24 +1,24 @@
 <template>
-  <form submit.delegate="register($event)" class="ui stacked segment form">
+  <form id="registerForm" class="ui stacked segment form">
     <h3 class="ui header">Register</h3>
     <div class="two fields">
       <div class="field">
         <label>First Name</label>
-        <input placeholder="First Name" type="text" value.bind="firstName">
+        <input name="firstname" placeholder="First Name" type="text" value.bind="firstName">
       </div>
       <div class="field">
         <label>Last Name</label>
-        <input placeholder="Last Name" type="text" value.bind="lastName">
+        <input name="lastname" placeholder="Last Name" type="text" value.bind="lastName">
       </div>
     </div>
     <div class="field">
       <label>Email</label>
-      <input placeholder="Email" type="text" value.bind="email">
+      <input name="mail" placeholder="Email" type="text" value.bind="email">
     </div>
     <div class="field">
       <label>Password</label>
-      <input type="password" value.bind="password">
+      <input name="password" type="password" value.bind="password">
     </div>
-    <button class="ui blue submit button">Submit</button>
+    <button class="ui blue button">Submit</button>
   </form>
 </template>
