--- a/src/viewmodels/login/login.html
+++ b/src/viewmodels/login/login.html
@@ -1,16 +1,16 @@
 <template>
 
-  <form submit.delegate="login($event)" class="ui stacked segment form">
+  <form id="loginForm" class="ui stacked segment form">
     <h3 class="ui header">Log-in</h3>
     <div class="field">
       <label>Email</label>
-      <input placeholder="email" value.bind="email"/>
+      <input name="mail" placeholder="email" value.bind="email"/>
     </div>
     <div class="field">
       <label>Password</label>
-      <input type="password" value.bind="password"/>
+      <input name="password" type="password" value.bind="password"/>
     </div>
-    <button class="ui blue submit button">Login</button>
+    <button class="ui blue button">Login</button>
     <h3>${prompt}</h3>
   </form>
 
