Added a button for deleting a user from its profile page Added a confirmation dialog when deleting a user

--- a/src/viewmodels/following/following.html
+++ b/src/viewmodels/following/following.html
@@ -6,7 +6,7 @@
     <div class="column">
       <div class="ui segments">
         <h2 class="ui center aligned icon header">
-          <i class="circular users icon"></i>
+          <i class="circular blue users icon"></i>
           Users, ${selectedUser.firstName} is following
         </h2>
         <section class="ui grid center aligned stacked segment">
